# tom_calculator

./: .gitignore  README.md  docker-compose.yaml
backend/: config.toml  pyproject.toml  setup.cfg
backend/tom_calculator/: app.py  exceptions.py  factory.py  middlewares.py  toml_config.py
backend/tom_calculator/calculator/: logic.py  models.py  routes.py  views.py
backend/tom_calculator/tests/: test_calculator.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: Calculator.vue
