[tool.poetry]
name = "tom_calculator"
version = "0.1.0"
description = ""
authors = ["Andrei Maksimov <nndii@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
pydantic = "^1.8.2"
gunicorn = "^20.1.0"
uvloop = "^0.15.3"
orjson = "^3.6.0"
PyYAML = "^5.4.1"
toml = "^0.10.2"
aiohttp-pydantic = "^1.10.0"

[tool.poetry.dev-dependencies]
ward = "^0.63.0-beta.0"
wemake-python-styleguide = "^0.15.3"
mypy = "^0.910"
types-toml = "^0.1.3"
ipython = "^7.26.0"
aiohttp-pydantic = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
